rotating hamburger menu!

--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -1,4 +1,7 @@
-<nav class="site_nav">
+
+{% include menu.html %}
+
+<nav id="site_nav" class="nav_options">
   <ul>
     {% assign nav = collections.nav | sortByPageOrder %} {% for item in nav %}
 
