--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,120 +1,1 @@
-* {
-  margin: 0;
-}
-
-body {
-  font-family: "Work Sans", sans-serif;
-}
-
-header {
-  width: 200px;
-  position: fixed;
-}
-
-.name {
-  display: block;
-  width: 100px;
-  margin: 30px auto;
-}
-
-.site_nav {
-  display: flex;
-  justify-content: space-around;
-  margin: 20px auto;
-  align-content: center;
-
-  a {
-    color: black;
-    text-decoration: none;
-  }
-
-  ul {
-    margin: 0;
-    padding: 0;
-  }
-
-  li {
-    list-style: none;
-    margin: 10px;
-    width: 110px;
-  }
-}
-
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0 20px 0 200px;
-  padding-top: 30px;
-}
-
-.bgimage {
-  width: 100%;
-  height: 500px;
-  object-fit: cover;
-}
-
-.give-up-counter {
-  display: flex;
-  justify-content: space-between;
-  width: 600px;
-
-  #counter {
-    font-size: 130px;
-    color: white;
-    display: block;
-    background-color: black;
-    border-radius: 5px;
-    width: 320px;
-    height: 180px;
-    text-align: center;
-    font-family: "Roboto Mono", "Work Sans", sans-serif;
-  }
-
-  h2 {
-    display: flex;
-    font-size: 48px;
-    margin: 0 0 0 10px;
-    width: 250px;
-    font-weight: 700;
-  }
-}
-
-.journal {
-  display: block;
-  padding: 0;
-  width: 400px;
-  text-align: center;
-
-  h1 {
-    font-size: 50px;
-    font-weight: 700;
-    margin: 0;
-  }
-
-  h2 {
-    font-size: 40px;
-    font-weight: 900;
-    font-family: "Playfair Display SC", serif;
-    font-style: italic;
-  }
-
-  h3 {
-    font-size: 32px;
-    font-style: italic;
-    font-weight: 400;
-  }
-
-  img {
-    margin: 15px 15px 10px 15px;
-  }
-}
-
-@media (max-width: 600px) {
-  .title {
-    width: 320px;
-    justify-content: space-around;
-    text-align: center;
-    flex-wrap: wrap;
-  }
-}
+@import "layouts/header", "layouts/nav", "misc/menu", "base";
