--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,6 +1,8 @@
 <header>
   <div>
-    <img class="name" src="/assets/signature.svg" alt="Chulmin Han" />
+    <a href="/index.html"
+      ><img class="name" src="/assets/signature.svg" alt="Chulmin Han"
+    /></a>
   </div>
   {% include nav.html %}
 </header>
