--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -2,8 +2,14 @@
   margin: 0;
 }
 
+@font-face {
+  font-family: "Lily of the Valley";
+  src: url("/assets/LilyOfTheValley.otf") format("opentype");
+}
+
 body {
   font-family: "Work Sans", sans-serif;
+  background-color: #c0dec7;
 }
 
 .wrapper {
@@ -44,22 +50,28 @@ body {
 }
 
 .separator {
-  margin: 0 auto;
+  background-color: white;
+  width: 100%;
+  height: 100px;
 
   h1 {
-    margin: 10px;
-    font-size: 52px;
+    position: absolute;
+    font-size: 40px;
+    font-weight: 400;
+    font-style: italic;
+    padding: 20px;
+    border: 1px solid black;
+    margin: 5px 5px 5px 0;
   }
 }
 
 .journal {
   display: block;
   padding: 0;
-  width: 400px;
   text-align: center;
 
   h1 {
-    font-size: 45px;
+    font-size: 64px;
     font-weight: 700;
     margin: 0;
   }
