--- a/src/sass/layouts/nav.scss
+++ b/src/sass/layouts/nav.scss
@@ -14,8 +14,15 @@
 
   li {
     list-style: none;
-    margin: 10px;
+    margin: 10px auto;
     text-align: center;
     font-size: 14px;
+    border: 1px solid white;
+    width: fit-content;
+    padding: 5px;
+  }
+
+  [aria-current] {
+    border: 1px solid black;
   }
 }
