--- a/src/sass/misc/menu.scss
+++ b/src/sass/misc/menu.scss
@@ -1,3 +1,6 @@
+$bg: white;
+$drawer: black;
+
 .drawerMenu {
   width: 36px;
   height: 36px;
@@ -12,8 +15,8 @@
 
 #front {
   display: block;
-  border: 1px solid black;
-  background-color: white;
+  border: 1px solid $drawer;
+  background-color: $bg;
   width: 30px;
   height: 30px;
   right: 2px;
@@ -22,42 +25,42 @@
 
 #frontLegs {
   display: block;
-  border: 1px solid black;
+  border: 1px solid $drawer;
   border-style: solid solid none solid;
   width: 22px;
   height: 4px;
   right: 6px;
   top: 29px;
-  background-color: white;
+  background-color: $bg;
   z-index: 1;
 }
 
 #side {
   display: none;
-  border: 1px solid black;
+  border: 1px solid $drawer;
   width: 0;
   height: 30px;
   left: 2px;
-  background-color: white;
+  background-color: $bg;
   z-index: 1;
   top: 2px;
 }
 
 #sideLegs {
   display: none;
-  border: 1px solid black;
+  border: 1px solid $drawer;
   border-style: solid solid none solid;
   width: 0;
   height: 4px;
   left: 2px;
   top: 29px;
-  background-color: white;
+  background-color: $bg;
   z-index: 1;
 }
 
 #backLeg {
   display: block;
-  border: 1px solid black;
+  border: 1px solid $drawer;
   border-style: none solid solid solid;
   width: 3px;
   height: 4px;
@@ -68,7 +71,7 @@
 
 #draw1 {
   display: block;
-  border: 1px solid black;
+  border: 1px solid $drawer;
   width: 22px;
   height: 4px;
   right: 6px;
@@ -77,7 +80,7 @@
 
 #draw2 {
   display: block;
-  border: 1px solid black;
+  border: 1px solid $drawer;
   width: 22px;
   height: 4px;
   right: 6px;
@@ -86,7 +89,7 @@
 
 #draw3 {
   display: block;
-  border: 1px solid black;
+  border: 1px solid $drawer;
   width: 22px;
   height: 4px;
   right: 6px;
@@ -97,7 +100,7 @@
   display: block;
   width: 1px;
   height: 20px;
-  background-color: black;
+  background-color: $drawer;
   transform: rotate(0);
   z-index: 1;
   left: 0;
@@ -108,14 +111,14 @@
   display: block;
   width: 1px;
   height: 20px;
-  background-color: black;
+  background-color: $drawer;
   transform: rotate(0);
   z-index: 1;
 }
 
 #topRight {
   display: block;
-  border: 1px solid black;
+  border: 1px solid $drawer;
   width: 34px;
   height: 1px;
   right: 0;
@@ -124,7 +127,7 @@
 
 #topLeft {
   display: block;
-  border: 1px solid black;
+  border: 1px solid $drawer;
   width: 34px;
   height: 1px;
   right: 0;
