--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -9,37 +9,24 @@
 
 body {
   font-family: "Work Sans", sans-serif;
-  background-color: #c0dec7;
+  //background-color: #c0dec7;
 }
 
 .wrapper {
-  margin-left: 150px;
+  margin-left: 120px;
 }
 
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
 }
 
 .box {
   display: flex;
+  justify-self: space-around;
   justify-content: space-around;
   width: 550px;
   margin: 50px auto;
-
-  #counter {
-    font-size: 130px;
-    color: white;
-    display: block;
-    background-color: black;
-    border-radius: 5px;
-    width: 320px;
-    height: 180px;
-    text-align: center;
-    font-family: "Roboto Mono", "Work Sans", sans-serif;
-    margin: 10px;
-  }
 
   h1 {
     display: flex;
@@ -52,17 +39,43 @@ body {
 .separator {
   background-color: white;
   width: 100%;
-  height: 100px;
+  height: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 
   h1 {
-    position: absolute;
     font-size: 40px;
     font-weight: 400;
-    font-style: italic;
-    padding: 20px;
-    border: 1px solid black;
-    margin: 5px 5px 5px 0;
+    padding: 25px 0;
+    margin-right: 5%;
   }
+}
+
+.giveUpCounter {
+  display: flex;
+  padding: 5px;
+  margin: auto 5% auto 0;
+
+  h2 {
+    width: 110px;
+    font-weight: 400;
+    font-size: 20px;
+    margin-left: 15px;
+  }
+}
+
+#counter {
+  font-size: 50px;
+  color: white;
+  display: block;
+  background-color: black;
+  border-radius: 5px;
+  width: fit-content;
+  height: fit-content;
+  text-align: center;
+  font-family: "Roboto Mono", "Work Sans", sans-serif;
+  padding: 3px 15px;
 }
 
 .journal {
