--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,1 +1,1 @@
-@import "layouts/header", "layouts/nav", "misc/menu", "base";
+@import "layouts/header", "layouts/nav", "misc/menu", "base", "layouts/journal";
