--- a/src/sass/layouts/journal.scss
+++ b/src/sass/layouts/journal.scss
@@ -1,8 +1,20 @@
+@keyframes pageOpTransition {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .entry {
   width: 150px;
   height: 150px;
   position: relative;
   margin: 5px;
+  animation-name: pageOpTransition;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
 
   img {
     width: 100%;
