--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,1 +1,2 @@
-@import "layouts/header", "layouts/nav", "misc/menu", "base", "layouts/journal";
+@import "layouts/header", "layouts/nav", "misc/menu", "base", "layouts/journal",
+  "layouts/footer", "layouts/giveup", "layouts/title", "layouts/separator";
