--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400;0,800;0,900;1,400;1,800;1,900&family=Roboto+Mono:wght@500&family=Work+Sans:wght@100;200;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400;0,800;0,900;1,400;1,800;1,900&family=Roboto+Mono:wght@500&family=Work+Sans:wght@100;200;400;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://use.typekit.net/wgc1kju.css" />
   </head>
 
   <body>
-    {% include header.html %} {{ content }}
+    {% include header.html %}
+
+    <div class="wrapper">{{ content }}</div>
+    {% include footer.html %}
   </body>
 </html>
