--- a/src/journalEntries.liquid
+++ b/src/journalEntries.liquid
@@ -3,18 +3,29 @@ pagination:
   data: wwJournal.entries
   size: 1
   alias: entry
-permalink: "test/{{ entry.date | date: '%b %d, %Y' }}/index.html"
+permalink: "journalEntries/{{ entry.date | date: '%b %d, %Y' }}/index.html"
 layout: base.html
 ---
 
-<div class="wrapper">
-  <section class="title">
-    <h1>Woodworking Journal</h1>
-    <h2>{{ entry.date }}</h2>
-    <div class="giveUpCounter">
-      <div id="counter"></div>
-      <h2>Times I've Wanted to Give Up</h2>
-    </div>
-  </section>
-  <script src="/js/counter.js"></script>
-</div>
+<section class="title">
+  <h1><a href="/pages/journal">WOODWORKING JOURNAL:</a></h1>
+  <h3>{{ entry.date }}</h3>
+</section>
+
+<section class="container">
+  {% assign pictures = entry.images %} {% for item in pictures %}
+  <div class="entryPage">
+    <img src="{{ item }}" alt="" />
+  </div>
+  {% endfor %}
+
+  <div class="entryPage">
+    <p>{{ entry.content }}</p>
+    <p>
+      I wanted to give up <span class="giveup">{{ entry.give }}</span> times
+      this post
+    </p>
+  </div>
+</section>
+
+<script src="/js/counter.js"></script>
