trying to redo and clean up

--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -1,7 +1,4 @@
-
-{% include menu.html %}
-
-<nav id="site_nav" class="nav_options">
+<nav class="site_nav">
   <ul>
     {% assign nav = collections.nav | sortByPageOrder %} {% for item in nav %}
 
