--- a/src/sass/misc/menu.scss
+++ b/src/sass/misc/menu.scss
@@ -6,8 +6,8 @@ $drawer: black;
   height: 36px;
   position: relative;
   display: block;
-  margin: 0 auto;
   cursor: pointer;
+  margin: auto 0 auto 0;
 }
 
 .drawerMenu div {
