--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,2 +1,3 @@
 @import "layouts/header", "layouts/nav", "misc/menu", "base", "layouts/journal",
-  "layouts/footer", "layouts/giveup", "layouts/title", "layouts/separator";
+  "layouts/footer", "layouts/giveup", "layouts/title", "layouts/separator",
+  "layouts/journalEntry";
