--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,8 +1,7 @@
 <header>
-  <div>
-    <a href="/index.html"
-      ><img class="name" src="/assets/signature.svg" alt="Chulmin Han"
-    /></a>
+  {% include menu.html %}
+  <div class="logo">
+    <a href="/index.html"> <img src="/assets/logo.svg" alt="Chulmin Han" /></a>
   </div>
   {% include nav.html %}
 </header>
