--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -14,9 +14,8 @@
   </head>
 
   <body>
-    {% include header.html %}
-
-    <div class="wrapper">{{ content }}</div>
-    {% include footer.html %}
+    <div class="mainContainer">
+      {% include header.html %} {{ content }} {% include footer.html %}
+    </div>
   </body>
 </html>
