--- a/src/sass/layouts/nav.scss
+++ b/src/sass/layouts/nav.scss
@@ -1,24 +1,24 @@
-#site_nav {
-  margin: 0 auto;
-  align-content: center;
+.site_nav {
+  position: relative;
+  width: 80%;
+  align-self: center;
 
   a {
     text-decoration: none;
   }
 
   ul {
-    margin: 0;
-    padding: 0;
+    display: flex;
+    justify-content: space-between;
   }
 
   li {
-    list-style: none;
-    margin: 10px auto;
     text-align: center;
-    font-size: 14px;
+    font-size: 18px;
     border: 1px solid white;
     width: fit-content;
     padding: 5px;
+    margin: 0 5px;
   }
 
   [aria-current] {
