--- a/src/sass/layouts/title.scss
+++ b/src/sass/layouts/title.scss
@@ -1,23 +1,21 @@
 .title {
-  background-color: white;
-  width: 100%;
-  height: fit-content;
+  height: 100px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-content: center;
+  margin: 0;
+  grid-column: 1 / 9;
 
   h1 {
     font-size: 40px;
     font-weight: 700;
-    padding: 25px 0;
-    margin-right: 5%;
     font-family: "niveau-grotesk-small-caps", sans-serif;
+    align-self: center;
   }
 
   h3 {
     font-size: 40px;
     font-weight: 200;
-    padding: 25px 0;
-    margin-right: 5%;
   }
 }
