--- a/src/sass/misc/menu.scss
+++ b/src/sass/misc/menu.scss
@@ -7,7 +7,8 @@ $drawer: black;
   position: relative;
   display: block;
   cursor: pointer;
-  margin: auto 0 auto 0;
+  margin: auto;
+  align-self: center;
 }
 
 .drawerMenu div {
