--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,3 +1,3 @@
-@import "layouts/header", "layouts/nav", "misc/menu", "base", "layouts/journal",
-  "layouts/footer", "layouts/giveup", "layouts/title", "layouts/separator",
-  "layouts/journalEntry";
+@import "variables", "layouts/header", "layouts/nav", "misc/menu", "base",
+  "layouts/journal", "layouts/footer", "layouts/giveup", "layouts/title",
+  "layouts/separator", "layouts/journalEntry";
